# Aegis-AI

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  error.json  out.txt  output.txt  tauri.conf.json
src-tauri/src/: ai_pipeline.rs  database.rs  lib.rs  orchestrator.rs  threat_intel.rs  validator.rs
src/components/: Dropzone.tsx
